# chat

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
apps/Client/: main.cpp
apps/Server/: CMakeLists.txt  main.cpp
chat/: CMakeLists.txt
chat/chatserver/: CMakeLists.txt
chat/chatserver/include/chat/chatserver/: ChatServer.hpp
chat/chatserver/src/: ChatServer.cpp  ClientConnection.cpp  ClientConnection.hpp  RequestHandler.hpp
chat/client/include/chat/client/: Client.hpp
chat/client/src/: Client.cpp
chat/common/: CMakeLists.txt
chat/common/include/chat/common/: Logging.hpp  SynchronizedObject.hpp  SynchronizedValue.hpp  ThreadPool.hpp
chat/common/src/: Logging.cpp  ThreadPool.cpp
chat/common/test/: CMakeLists.txt  SynchronizedObjectTest.cpp
chat/messages/: CMakeLists.txt
chat/messages/include/chat/messages/: Close.hpp  Message.hpp  Ping.hpp  Pong.hpp  Request.hpp  Response.hpp  Serializer.hpp  TestRequest.hpp  TestResponse.hpp
chat/messages/src/: Close.cpp  Message.cpp  Ping.cpp  Pong.cpp  Request.cpp  Response.cpp  Serializer.cpp
chat/messages/src/response/: Pong.cpp
chat/server/: CMakeLists.txt
chat/server/include/chat/server/: Server.hpp
chat/server/src/: Connection.cpp  Connection.hpp  RequestHandler.cpp  Server.cpp
cmake/: FindAsio.cmake  Macros.cmake  dependencies.cmake  macros.cmake  options.cmake
docs/: design.md
src/: CMakeLists.txt
src/apps/Client/: CMakeLists.txt  main.cpp
src/apps/Server/: CMakeLists.txt  main.cpp
src/apps/client/: CMakeLists.txt  main.cpp
src/apps/server/: main.cpp
src/chat/client/: CMakeLists.txt
src/chat/client/include/chat/client/: Client.hpp
src/chat/common/include/chat/common/: Logging.hpp  Result.hpp  SynchronizedObject.hpp
src/chat/common/src/: ThreadPool.cpp
src/chat/common/test/: CMakeLists.txt  SynchronizedObjectTest.cpp  ThreadPoolTest.cpp
src/chat/messages/: CMakeLists.txt
src/chat/messages/include/chat/messages/: Response.hpp
src/chat/messages/include/chat/messages/request/: Ping.hpp
src/chat/messages/src/: Request.cpp  Response.cpp  Serializer.cpp
src/chat/messages/src/request/: Ping.cpp
src/chat/messages/test/: CMakeLists.txt  SerializerTest.cpp
src/chat/server/: CMakeLists.txt
src/chat/server/src/: Connection.hpp  RequestHandler.cpp  RequestHandler.hpp
src/chat/server/test/: CMakeLists.txt  RequestHandlerTest.cpp
src/core/client/: CMakeLists.txt
src/core/client/include/chat/client/: Client.hpp
src/core/client/src/: Client.cpp
src/core/client/test/: CMakeLists.txt  ClientTest.cpp
src/core/common/: CMakeLists.txt
src/core/common/include/chat/common/: Buffer.hpp  BufferView.hpp  ByteArray.hpp  ByteSpan.hpp  ByteString.hpp  EnumMeta.hpp  FixedBuffer.hpp  InputByteStream.hpp  Logging.hpp  OutputByteStream.hpp  Port.hpp  Result.hpp  Synced.hpp  SynchronizedObject.hpp  ThreadPool.hpp  utility.hpp
src/core/common/src/: BufferView.cpp  ByteSpan.cpp  InputByteStream.cpp  Logging.cpp  OutputByteStream.cpp  ThreadPool.cpp  utility.cpp
src/core/common/test/: ByteSpanTest.cpp  CMakeLists.txt  InputByteStreamTest.cpp  OutputByteStreamTest.cpp  ResultTest.cpp  SynchronizedObjectTest.cpp  ThreadPoolTest.cpp  UtilityTest.cpp
src/core/messages/: CMakeLists.txt
src/core/messages/include/chat/messages/: Close.hpp  IncrementalRequestDeserializer.hpp  Message.hpp  Request.hpp  Response.hpp  Serializer.hpp  serialize.hpp
src/core/messages/include/chat/messages/request/: Ping.hpp
src/core/messages/include/chat/messages/response/: Pong.hpp
src/core/messages/src/: Close.cpp  IncrementalRequestDeserializer.cpp  Message.cpp  Request.cpp  Response.cpp  Serializer.cpp  serialize.cpp
src/core/messages/src/request/: Ping.cpp
src/core/messages/src/response/: Pong.cpp
src/core/messages/test/: CMakeLists.txt  IncrementalRequestDeserializerTest.cpp  MessageTest.cpp  SerializeTest.cpp  SerializerTest.cpp
src/core/server/: CMakeLists.txt
src/core/server/include/chat/server/: Server.hpp
src/core/server/src/: Connection.cpp  Connection.hpp  ConnectionManager.cpp  ConnectionManager.hpp  Formatter.hpp  Listener.cpp  Listener.hpp  RequestHandler.cpp  RequestHandler.hpp  Server.cpp  ServerImpl.cpp  ServerImpl.hpp  ServerState.hpp  Session.cpp  Session.hpp  SessionManager.cpp  SessionManager.hpp  StateManager.cpp  StateManager.hpp
src/core/server/test/: CMakeLists.txt  RequestHandlerTest.cpp  StateManagerTest.cpp
tests/: CMakeLists.txt
tests/client/: ClientTest.cpp
tests/common/: BufferViewTest.cpp  CMakeLists.txt  EnumMetaTest.cpp  InputByteStreamTest.cpp  OutputByteStreamTest.cpp  ResultTest.cpp  SynchronizedObjectTest.cpp  ThreadPoolTest.cpp  UtilityTest.cpp
tests/messages/: IncrementalRequestDeserializerTest.cpp  MessageTest.cpp  SerializeTest.cpp
tests/server/: CMakeLists.txt  RequestHandlerTest.cpp
